# clover

./: .env.example  .gitignore  README.md  clover.example.yaml  pyproject.toml  requirements.txt
scripts/orchestrator/: __init__.py  agent_context.py  claude_runner.py  cli.py  config.py  docker_utils.py  github_watcher.py  main.py  output_utils.py  state.py  test_session.py  tui.py  worktree_manager.py
scripts/orchestrator/prompts/: implement.md  implement_review.md  pre_pr_review.md  review.md
scripts/orchestrator/tests/: __init__.py  conftest.py  test_claude_runner.py  test_config.py  test_github_watcher.py  test_output_utils.py  test_state.py  test_worktree_manager.py
