[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clover"
version = "0.1.0"
description = "A daemon that watches GitHub issues/PRs and launches Claude Code to implement features and review code"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
clover = "scripts.orchestrator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["scripts/orchestrator/tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
